--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                     <div class="service-item">
                         <div class="service-topic-container jCollapseTopic">
                             <div class="service-icon-arrow"></div>
-                            <div class="service-topic">28 Turn-key</div>
+                            <div class="service-topic">Sales Service</div>
                             <div class="service-icon-hand"></div>
                         </div>
                         <div class="service-desc-container jCollapseContent">
@@ -407,7 +407,7 @@
                     <div class="service-item">
                         <div class="service-topic-container jCollapseTopic">
                             <div class="service-icon-arrow"></div>
-                            <div class="service-topic">28 Turn-key</div>
+                            <div class="service-topic">Innovation Center</div>
                             <div class="service-icon-hand"></div>
                         </div>
                         <div class="service-desc-container jCollapseContent">
@@ -424,7 +424,7 @@
                     <div class="service-item">
                         <div class="service-topic-container jCollapseTopic">
                             <div class="service-icon-arrow"></div>
-                            <div class="service-topic">28 Turn-key</div>
+                            <div class="service-topic">Reapir Maintanance</div>
                             <div class="service-icon-hand"></div>
                         </div>
                         <div class="service-desc-container jCollapseContent">
@@ -441,7 +441,7 @@
                     <div class="service-item">
                         <div class="service-topic-container jCollapseTopic">
                             <div class="service-icon-arrow"></div>
-                            <div class="service-topic">28 Turn-key</div>
+                            <div class="service-topic">Technical Support</div>
                             <div class="service-icon-hand"></div>
                         </div>
                         <div class="service-desc-container jCollapseContent">
@@ -459,8 +459,149 @@
             </div>
         </section>
         <section class="solution">
+            <div class="solution-title">SOLUTION</div>
+            <div class="solution-list">
+                <div class="solution-item">
+                    <div class="solution-intro">
+                        <div class="solution-topic">28 Aqua Feed</div>
+                        <div class="solution-desc">
+                            16 Being the best equipment and solution
+                            provider, IDAH been serving the leading
+                            aquafeed companies around the world for
+                            40 years.
+                        </div>
+                        <a class="solution-icon-plus"><img src="/images/icon/icon-plus-orange.svg"></a>
+                    </div>
+                    <div class="solution-img">
+                        <img src="/images/sample/IDAH-web-16.jpg">
+                    </div>
+                </div>
+                <div class="solution-item">
+                    <div class="solution-intro">
+                        <div class="solution-topic">Animal Feed</div>
+                        <div class="solution-desc">
+                            Feed safety is a big issue in the animal feed
+                            industry. IDAH animal feed solutions and machinery
+                            ensures the best results and accuracy .
+                        </div>
+                        <a class="solution-icon-plus"><img src="/images/icon/icon-plus-orange.svg"></a>
+                    </div>
+                    <div class="solution-img">
+                        <img src="/images/sample/IDAH-web-17.jpg">
+                    </div>
+                </div>
+                <div class="solution-item">
+                    <div class="solution-intro">
+                        <div class="solution-topic">Pet Food</div>
+                        <div class="solution-desc">
+                            Pet food industry is now focused on the
+                            production of wet pet food and pet snack.
+                            To make these products our patented.
+                        </div>
+                        <a class="solution-icon-plus"><img src="/images/icon/icon-plus-orange.svg"></a>
+                    </div>
+                    <div class="solution-img">
+                        <img src="/images/sample/IDAH-web-18.jpg">
+                    </div>
+                </div>
+                <div class="solution-item">
+                    <div class="solution-intro">
+                        <div class="solution-topic">Food</div>
+                        <div class="solution-desc">
+                            IDAH has started making extruded food
+                            products since 1997 with the launch of a
+                            food grade laboratory equipped.
+                        </div>
+                        <a class="solution-icon-plus"><img src="/images/icon/icon-plus-orange.svg"></a>
+                    </div>
+                    <div class="solution-img">
+                        <img src="/images/sample/IDAH-web-19.jpg">
+                    </div>
+                </div>
+                <div class="solution-item">
+                    <div class="solution-intro">
+                        <div class="solution-topic">Wood & Biomass</div>
+                        <div class="solution-desc">
+                            Being the best equipment and solution
+                            provider, IDAH has been serving the leading
+                            aquafeed companies around the world for
+                            40 years.
+                        </div>
+                        <a class="solution-icon-plus"><img src="/images/icon/icon-plus-orange.svg"></a>
+                    </div>
+                    <div class="solution-img">
+                        <img src="/images/sample/IDAH-web-20.jpg">
+                    </div>
+                </div>
+                <div class="solution-item">
+                    <div class="solution-intro">
+                        <div class="solution-topic">Premix & Concentrates</div>
+                        <div class="solution-desc">
+                            Being the best equipment and solution provider,
+                            IDAH has been serving the leading aquafeed
+                            companies around the world for 40 years.
+                        </div>
+                        <a class="solution-icon-plus"><img src="/images/icon/icon-plus-orange.svg"></a>
+                    </div>
+                    <div class="solution-img">
+                        <img src="/images/sample/IDAH-web-21.jpg">
+                    </div>
+                </div>
+            </div>
         </section>
-        <section class="news">
+        <section class="idah-news">
+            <div class="idah-news-title">NEWS</div>
+            <div class="idah-news-slide">
+                <div class="idah-news-item">
+                    <div class="idah-news-article">
+                        <div class="idah-news-date">16 News / 2021.02.22</div>
+                        <div class="idah-news-topic">
+                            22 Complete pre and post
+                            conditioning solutions for
+                            shrimp feeds.
+                        </div>
+                        <div class="idah-news-desc">
+                            16 As the worldwide leader in
+                            providing aqua feed production
+                            machines.
+                        </div>
+                        <a class="idah-news-read-more"><img src="/images/icon/IDAH-web-22.png">16 READ MORE</a>
+                    </div>
+                    <div class="idah-news-img">
+                        <img src="/images/sample/IDAH-web-23.jpg">
+                    </div>
+                </div>
+                <div class="idah-news-item">
+                    <div class="idah-news-article">
+                        <div class="idah-news-date">16 News / 2021.02.22</div>
+                        <div class="idah-news-topic">
+                            22 Complete pre and post
+                            conditioning solutions for
+                            shrimp feeds.
+                        </div>
+                        <div class="idah-news-desc">
+                            16 As the worldwide leader in
+                            providing aqua feed production
+                            machines.
+                        </div>
+                        <a class="idah-news-read-more"><img src="/images/icon/IDAH-web-22.png">16 READ MORE</a>
+                    </div>
+                    <div class="idah-news-img">
+                        <img src="/images/sample/IDAH-web-23.jpg">
+                    </div>
+                </div>
+            </div>
+            <div class="idah-share">
+                <div class="idah-share-social">
+                    <span class="idah-share-social-title">Share</span>
+                    <span class="idah-share-social-arrow"><img src="/images/icon/IDAH-web-25.png"></span>
+                    <a><i class="fa fa-facebook"></i></a>
+                    <a><i class="fa fa-linkedin"></i></a>
+                    <a><i class="fa fa-twitter"></i></a>
+                    <a><i class="fa fa-envelope"></i></a>
+                </div>
+                <a class="idah-share-btn-back">Back</a>
+            </div>
         </section>
         <section class="contact">
         </section>
