--- a/index.html
+++ b/index.html
@@ -565,29 +565,35 @@
                             providing aqua feed production
                             machines.
                         </div>
-                        <a class="idah-news-read-more"><img src="/images/icon/IDAH-web-22.png">16 READ MORE</a>
+                        <a class="idah-news-read-more">
+                            <img src="/images/icon/IDAH-web-22.png">
+                            <span>READ MORE</span>
+                        </a>
                     </div>
-                    <div class="idah-news-img">
-                        <img src="/images/sample/IDAH-web-23.jpg">
+                    <div class="idah-news-img-box">
+                        <div class="idah-news-img" style="background-image: url(/images/sample/IDAH-web-23.jpg)"></div>
                     </div>
                 </div>
                 <div class="idah-news-item">
                     <div class="idah-news-article">
-                        <div class="idah-news-date">16 News / 2021.02.22</div>
+                        <div class="idah-news-date">News / 2021.02.22</div>
                         <div class="idah-news-topic">
-                            22 Complete pre and post
+                            Complete pre and post
                             conditioning solutions for
                             shrimp feeds.
                         </div>
                         <div class="idah-news-desc">
-                            16 As the worldwide leader in
+                            As the worldwide leader in
                             providing aqua feed production
                             machines.
                         </div>
-                        <a class="idah-news-read-more"><img src="/images/icon/IDAH-web-22.png">16 READ MORE</a>
+                        <a class="idah-news-read-more">
+                            <img src="/images/icon/IDAH-web-22.png">
+                            <span>READ MORE</span>
+                        </a>
                     </div>
-                    <div class="idah-news-img">
-                        <img src="/images/sample/IDAH-web-23.jpg">
+                    <div class="idah-news-img-box">
+                        <div class="idah-news-img" style="background-image: url(/images/sample/IDAH-web-24.jpg)"></div>
                     </div>
                 </div>
             </div>
@@ -604,6 +610,18 @@
             </div>
         </section>
         <section class="contact">
+            <div class="contact-container">
+                <div class="contact-title">
+                    Need to share a file with us?
+                    Let us know, we can help.
+                </div>
+                <div class="contact-desc">
+                    If you have any questions about how to upload please don't hesitate
+                    to call us at <a class="contact-phone">+886-3-990-2701</a> or email us at <a
+                        class="contact-email">idah@idah.com</a>
+                </div>
+                <a class="contact-btn">Contact Us</a>
+            </div>
         </section>
     </main>
 
