--- a/index.html
+++ b/index.html
@@ -209,17 +209,17 @@
         </section>
         <section class="intro">
             <div class="intro-title">
-                60 IDAH is a total solution provider for feed and food production.
+                IDAH is a total solution provider for feed and food production.
             </div>
             <div class="intro-sub-title">
-                28 As the worldwide leader in providing aqua feed production machines, IDAH has the largest market share
+                As the worldwide leader in providing aqua feed production machines, IDAH has the largest market share
                 in
                 shrimp feed processing. Our core products and services include: Consultancy, Education, R&D prototyping,
                 Turnkey Solutions, Single Machine, Spare Parts, and After Services.
             </div>
             <div class="intro-article">
                 <div class="intro-section">
-                    16 As the worldwide leader in providing aqua feed production machines, IDAH has the largest market
+                    As the worldwide leader in providing aqua feed production machines, IDAH has the largest market
                     share in shrimp feed processing. Our core products
                     and services include: Consultancy, Education, R&D prototyping, Turnkey Solutions, Single Machine,
                     Spare Parts, and After Services. As the worldwide
@@ -237,12 +237,14 @@
             </div>
         </section>
         <section class="product">
-            <div class="product-title">60 PRODUCT</div>
+            <div class="product-title">PRODUCT</div>
             <div class="product-list">
                 <a class="product-item">
                     <div class="product-item-display">
                         <img class="product-img" src="images/sample/IDAH-web-08.jpg">
-                        <div class="product-category">Pelleting</div>
+                        <div class="product-category">Grinding,
+                            Pulverizing,
+                            Crumbling</div>
                     </div>
                     <div class="product-item-hover">
                         <div class="product-info">
@@ -261,7 +263,8 @@
                 <a class="product-item">
                     <div class="product-item-display">
                         <img class="product-img" src="images/sample/IDAH-web-09.jpg">
-                        <div class="product-category">Pelleting</div>
+                        <div class="product-category">Extrusion and
+                            Expander</div>
                     </div>
                     <div class="product-item-hover">
                         <div class="product-info">
@@ -280,7 +283,7 @@
                 <a class="product-item">
                     <div class="product-item-display">
                         <img class="product-img" src="images/sample/IDAH-web-10.jpg">
-                        <div class="product-category">Pelleting</div>
+                        <div class="product-category">Drying and Cooling</div>
                     </div>
                     <div class="product-item-hover">
                         <div class="product-info">
@@ -318,7 +321,7 @@
                 <a class="product-item">
                     <div class="product-item-display">
                         <img class="product-img" src="images/sample/IDAH-web-09.jpg">
-                        <div class="product-category">Pelleting</div>
+                        <div class="product-category">Conditioning</div>
                     </div>
                     <div class="product-item-hover">
                         <div class="product-info">
@@ -337,7 +340,7 @@
                 <a class="product-item">
                     <div class="product-item-display">
                         <img class="product-img" src="images/sample/IDAH-web-10.jpg">
-                        <div class="product-category">Pelleting</div>
+                        <div class="product-category">Parts</div>
                     </div>
                     <div class="product-item-hover">
                         <div class="product-info">
@@ -358,9 +361,9 @@
         <section class="service">
             <div class="service-container">
                 <div class="service-title-container">
-                    <div class="service-title">60 SERVICE</div>
+                    <div class="service-title">SERVICE</div>
                     <div class="service-intro">
-                        16 Making “protable feeds” is not just about
+                        Making “protable feeds” is not just about
                         how single machinery performs but others
                         like reasonable process ow for chosen
                         products, formulation designed for local
@@ -373,12 +376,12 @@
                     <div class="service-item">
                         <div class="service-topic-container jCollapseTopic">
                             <div class="service-icon-arrow"></div>
-                            <div class="service-topic">28 Turn-key</div>
+                            <div class="service-topic">Turn-key</div>
                             <div class="service-icon-hand"></div>
                         </div>
                         <div class="service-desc-container jCollapseContent">
                             <div class="service-desc">
-                                16 Training courses All training courses discussed in Home
+                                Training courses All training courses discussed in Home
                                 partsandservices trainingcourses can be arranged at customer sites.
                                 New product development Specialists in IDAH are happy to assist to
                                 develop new products with customers. In fact, many of the great
@@ -458,7 +461,7 @@
                 </div>
             </div>
         </section>
-        <section class="solution">
+        <!-- <section class="solution">
             <div class="solution-title">SOLUTION</div>
             <div class="solution-list">
                 <div class="solution-item">
@@ -622,7 +625,7 @@
                 </div>
                 <a class="contact-btn">Contact Us</a>
             </div>
-        </section>
+        </section> -->
     </main>
 
     <footer class="ftr">
