--- a/index.html
+++ b/index.html
@@ -461,12 +461,12 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="solution">
+        <section class="solution">
             <div class="solution-title">SOLUTION</div>
             <div class="solution-list">
                 <div class="solution-item">
                     <div class="solution-intro">
-                        <div class="solution-topic">28 Aqua Feed</div>
+                        <div class="solution-topic">Aqua Feed</div>
                         <div class="solution-desc">
                             16 Being the best equipment and solution
                             provider, IDAH been serving the leading
@@ -552,7 +552,7 @@
                 </div>
             </div>
         </section>
-        <section class="idah-news">
+        <!-- <section class="idah-news">
             <div class="idah-news-title">NEWS</div>
             <div class="idah-news-slide">
                 <div class="idah-news-item">
