--- a/index.html
+++ b/index.html
@@ -552,8 +552,28 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="idah-news">
+        <section class="idah-news">
             <div class="idah-news-title">NEWS</div>
+            <div class="owl-carousel banner-list">
+                <div class="item">
+                    <div class="banner-slide-item">
+                        <div class="banner-slide-title">ContraTwin Screw Extruder</div>
+                        <img src="images/sample/IDAH-web-04.jpg" />
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="banner-slide-item">
+                        <div class="banner-slide-title">ContraTwin Screw Extruder</div>
+                        <img src="images/sample/IDAH-web-04.jpg" />
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="banner-slide-item">
+                        <div class="banner-slide-title">ContraTwin Screw Extruder</div>
+                        <img src="images/sample/IDAH-web-04.jpg" />
+                    </div>
+                </div>
+            </div>
             <div class="idah-news-slide">
                 <div class="idah-news-item">
                     <div class="idah-news-article">
@@ -612,7 +632,7 @@
                 <a class="idah-share-btn-back">Back</a>
             </div>
         </section>
-        <section class="contact">
+        <!-- <section class="contact">
             <div class="contact-container">
                 <div class="contact-title">
                     Need to share a file with us?
