--- a/index.html
+++ b/index.html
@@ -554,69 +554,55 @@
         </section>
         <section class="idah-news">
             <div class="idah-news-title">NEWS</div>
-            <div class="owl-carousel banner-list">
+            <div class="owl-carousel idah-news-slide">
                 <div class="item">
-                    <div class="banner-slide-item">
-                        <div class="banner-slide-title">ContraTwin Screw Extruder</div>
-                        <img src="images/sample/IDAH-web-04.jpg" />
+                    <div class="idah-news-item">
+                        <div class="idah-news-article">
+                            <div class="idah-news-date">News / 2021.02.22</div>
+                            <div class="idah-news-topic">
+                                Complete pre and post
+                                conditioning solutions for
+                                shrimp feeds.
+                            </div>
+                            <div class="idah-news-desc">
+                                As the worldwide leader in
+                                providing aqua feed production
+                                machines.
+                            </div>
+                            <a class="idah-news-read-more">
+                                <img src="/images/icon/IDAH-web-22.png">
+                                <span>READ MORE</span>
+                            </a>
+                        </div>
+                        <div class="idah-news-img-box">
+                            <div class="idah-news-img" style="background-image: url(/images/sample/IDAH-web-23.jpg)">
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="item">
-                    <div class="banner-slide-item">
-                        <div class="banner-slide-title">ContraTwin Screw Extruder</div>
-                        <img src="images/sample/IDAH-web-04.jpg" />
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="banner-slide-item">
-                        <div class="banner-slide-title">ContraTwin Screw Extruder</div>
-                        <img src="images/sample/IDAH-web-04.jpg" />
-                    </div>
-                </div>
-            </div>
-            <div class="idah-news-slide">
-                <div class="idah-news-item">
-                    <div class="idah-news-article">
-                        <div class="idah-news-date">16 News / 2021.02.22</div>
-                        <div class="idah-news-topic">
-                            22 Complete pre and post
-                            conditioning solutions for
-                            shrimp feeds.
+                    <div class="idah-news-item">
+                        <div class="idah-news-article">
+                            <div class="idah-news-date">News / 2021.02.22</div>
+                            <div class="idah-news-topic">
+                                Complete pre and post
+                                conditioning solutions for
+                                shrimp feeds.
+                            </div>
+                            <div class="idah-news-desc">
+                                As the worldwide leader in
+                                providing aqua feed production
+                                machines.
+                            </div>
+                            <a class="idah-news-read-more">
+                                <img src="/images/icon/IDAH-web-22.png">
+                                <span>READ MORE</span>
+                            </a>
                         </div>
-                        <div class="idah-news-desc">
-                            16 As the worldwide leader in
-                            providing aqua feed production
-                            machines.
+                        <div class="idah-news-img-box">
+                            <div class="idah-news-img" style="background-image: url(/images/sample/IDAH-web-24.jpg)">
+                            </div>
                         </div>
-                        <a class="idah-news-read-more">
-                            <img src="/images/icon/IDAH-web-22.png">
-                            <span>READ MORE</span>
-                        </a>
-                    </div>
-                    <div class="idah-news-img-box">
-                        <div class="idah-news-img" style="background-image: url(/images/sample/IDAH-web-23.jpg)"></div>
-                    </div>
-                </div>
-                <div class="idah-news-item">
-                    <div class="idah-news-article">
-                        <div class="idah-news-date">News / 2021.02.22</div>
-                        <div class="idah-news-topic">
-                            Complete pre and post
-                            conditioning solutions for
-                            shrimp feeds.
-                        </div>
-                        <div class="idah-news-desc">
-                            As the worldwide leader in
-                            providing aqua feed production
-                            machines.
-                        </div>
-                        <a class="idah-news-read-more">
-                            <img src="/images/icon/IDAH-web-22.png">
-                            <span>READ MORE</span>
-                        </a>
-                    </div>
-                    <div class="idah-news-img-box">
-                        <div class="idah-news-img" style="background-image: url(/images/sample/IDAH-web-24.jpg)"></div>
                     </div>
                 </div>
             </div>
@@ -632,7 +618,7 @@
                 <a class="idah-share-btn-back">Back</a>
             </div>
         </section>
-        <!-- <section class="contact">
+        <section class="contact">
             <div class="contact-container">
                 <div class="contact-title">
                     Need to share a file with us?
@@ -645,7 +631,7 @@
                 </div>
                 <a class="contact-btn">Contact Us</a>
             </div>
-        </section> -->
+        </section>
     </main>
 
     <footer class="ftr">
