feat: banner slider

--- a/index.html
+++ b/index.html
@@ -186,24 +186,18 @@
     </header>
     <main>
         <section class="banner">
-            <div class="owl-carousel banner-list">
-                <div class="item">
-                    <div class="banner-slide-item">
-                        <div class="banner-slide-title">ContraTwin Screw Extruder</div>
-                        <img src="images/sample/IDAH-web-04.jpg" />
-                    </div>
+            <div class="master-slider banner-list" id="bannerList">
+                <div class="ms-slide">
+                    <div class="banner-slide-title">ContraTwin Screw Extruder</div>
+                    <img src="images/sample/IDAH-web-04.jpg" />
                 </div>
-                <div class="item">
-                    <div class="banner-slide-item">
-                        <div class="banner-slide-title">ContraTwin Screw Extruder</div>
-                        <img src="images/sample/IDAH-web-04.jpg" />
-                    </div>
+                <div class="ms-slide">
+                    <div class="banner-slide-title">Wood & Biomass</div>
+                    <img src="images/sample/IDAH-web-04.jpg" />
                 </div>
-                <div class="item">
-                    <div class="banner-slide-item">
-                        <div class="banner-slide-title">ContraTwin Screw Extruder</div>
-                        <img src="images/sample/IDAH-web-04.jpg" />
-                    </div>
+                <div class="ms-slide">
+                    <div class="banner-slide-title">ContraTwin Screw Extruder</div>
+                    <img src="images/sample/IDAH-web-04.jpg" />
                 </div>
             </div>
         </section>
