fix: contact us buttom

--- a/index.html
+++ b/index.html
@@ -180,9 +180,11 @@
                 </a>
             </div>
         </div>
-        <a class="btn-contact-us">
-            Contact Us
-        </a>
+        <div class="btn-contact-us-box">
+            <a class="btn-contact-us">
+                Contact Us
+            </a>
+        </div>
     </header>
     <main>
         <section class="banner">
@@ -206,26 +208,32 @@
                 IDAH is a total solution provider for feed and food production.
             </div>
             <div class="intro-sub-title">
-                As the worldwide leader in providing aqua feed production machines, IDAH has the largest market share
+                As the worldwide leader in providing aqua feed production machines, IDAH has the largest market
+                share
                 in
-                shrimp feed processing. Our core products and services include: Consultancy, Education, R&D prototyping,
+                shrimp feed processing. Our core products and services include: Consultancy, Education, R&D
+                prototyping,
                 Turnkey Solutions, Single Machine, Spare Parts, and After Services.
             </div>
             <div class="intro-article">
                 <div class="intro-section">
                     As the worldwide leader in providing aqua feed production machines, IDAH has the largest market
                     share in shrimp feed processing. Our core products
-                    and services include: Consultancy, Education, R&D prototyping, Turnkey Solutions, Single Machine,
+                    and services include: Consultancy, Education, R&D prototyping, Turnkey Solutions, Single
+                    Machine,
                     Spare Parts, and After Services. As the worldwide
-                    leader in providing aqua feed production machines, IDAH has the largest market share in shrimp feed
+                    leader in providing aqua feed production machines, IDAH has the largest market share in shrimp
+                    feed
                     processing.
                 </div>
                 <div class="intro-section">
-                    Our core products and services include: Consultancy, Education, R&D prototyping, Turnkey Solutions,
+                    Our core products and services include: Consultancy, Education, R&D prototyping, Turnkey
+                    Solutions,
                     Single Machine, Spare Parts, and After Services.
                     providing aqua feed production machines, IDAH has the largest market share in shrimp feed
                     processing. Our core products and services include:
-                    Consultancy, Education, R&D prototyping, Turnkey Solutions, Single Machine, Spare Parts, and After
+                    Consultancy, Education, R&D prototyping, Turnkey Solutions, Single Machine, Spare Parts, and
+                    After
                     Services.
                 </div>
             </div>
@@ -627,7 +635,6 @@
             </div>
         </section>
     </main>
-
     <footer class="ftr">
         <div class="ftr-info">
             <div class="ftr-link-topic">&nbsp;</div>
